# praetor

./: .gitignore  .goreleaser.yaml  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  RESOURCES.md  docker-compose.yml  generate_certs.sh  generate_signing_keys.sh  go.work  go.work.sum  task.md
.github/workflows/: build-packages.yml  ci.yml  release.yml
agent/: dag.go  dag_test.go  go.mod  go.sum  main.go  praetor-agent.service
agent/app/: BUILD.bazel  agent.go  agent_test.go
agent/cmd/agent/: BUILD.bazel  main.go
agent/engine/: BUILD.bazel  dag.go  dag_test.go  executor.go  executor_test.go  reconciler.go  reconciler_test.go  scheduler.go  scheduler_test.go
agent/facts/: BUILD.bazel  facts.go
agent/facts/core/: BUILD.bazel  core.go
agent/pki/: BUILD.bazel  bootstrap.go  bootstrap_test.go
agent/plugin/: BUILD.bazel  client.go
agent/resources/: BUILD.bazel  go.mod  resource.go
agent/resources/cron/: cron.go  cron_test.go
agent/resources/exec/: exec.go
agent/resources/file/: file.go
agent/resources/group/: group.go  group_test.go
agent/resources/pkg/: pkg.go
agent/resources/svc/: svc.go
agent/resources/user/: user.go
cli/: BUILD.bazel  go.mod  go.sum
cli/cmd/praetorctl/: BUILD.bazel  main.go
deploy/deb/praetor-agent/DEBIAN/: control  postinst  prerm
deploy/deb/praetor-agent/etc/praetor/: agent.env
deploy/deb/praetor-plugin-linux/DEBIAN/: control
deploy/helm/praetor-master/: Chart.yaml  values.yaml
deploy/helm/praetor-master/templates/: NOTES.txt  configmap.yaml  deployment.yaml  service.yaml
deploy/systemd/: praetor-agent.service
e2e/: BUILD.bazel  cluster_test.go  go.mod  go.sum
master/: Dockerfile  catalog.yaml  go.mod  go.sum  main.go
master/broker/: BUILD.bazel  nats.go  nats_test.go
master/catalog/: BUILD.bazel  hydrator.go  hydrator_test.go
master/classifier/: BUILD.bazel  classifier.go  classifier_test.go
master/cmd/master/: BUILD.bazel  classification.yaml  main.go  secrets.yaml
master/gitops/: BUILD.bazel  syncer.go  syncer_test.go
master/roles/: base.yaml  web.yaml
master/server/: BUILD.bazel  ca.go  ca_test.go  grpc.go  grpc_test.go  operator.go
nats/: Dockerfile
nats/conf/: nats-server.conf
pkg/: go.mod  go.sum
pkg/broker/: BUILD.bazel  broker.go  messages.go
pkg/broker/nats/: BUILD.bazel  nats.go
pkg/pki/: BUILD.bazel  auto_tls.go
pkg/plugin/: BUILD.bazel  interface.go
pkg/secrets/: BUILD.bazel  provider.go
pkg/secrets/local/: BUILD.bazel  local.go  local_test.go
pkg/secrets/vault/: BUILD.bazel  vault.go
pkg/storage/: BUILD.bazel  provider.go
pkg/storage/natsjs/: BUILD.bazel  nats.go  nats_test.go
pkg/telemetry/: BUILD.bazel  telemetry.go
plugins/linux/: go.mod  go.sum
plugins/linux/cmd/praetor-plugin-linux/: BUILD.bazel  main.go
plugins/linux/resources/: BUILD.bazel  resource.go
plugins/linux/resources/cron/: BUILD.bazel  cron.go  cron_test.go
plugins/linux/resources/exec/: BUILD.bazel  exec.go
plugins/linux/resources/file/: BUILD.bazel  file.go
plugins/linux/resources/group/: BUILD.bazel  group.go  group_test.go
plugins/linux/resources/pkg/: BUILD.bazel  pkg.go
plugins/linux/resources/svc/: BUILD.bazel  svc.go
plugins/linux/resources/user/: BUILD.bazel  user.go  user_test.go
proto/: BUILD.bazel  go.mod  master.proto  plugin.proto
schema/: BUILD.bazel  common.go  cron.go  exec.go  file.go  go.mod  group.go  package.go  service.go  user.go
