module(
    name = "praetor",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.39.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(go_deps, "com_github_charmbracelet_bubbles", "com_github_charmbracelet_bubbletea", "com_github_charmbracelet_lipgloss", "com_github_go_git_go_git_v5", "com_github_go_playground_validator_v10", "com_github_guilledipa_praetor_proto_gen", "com_github_guilledipa_praetor_proto_gen_plugin", "com_github_hashicorp_go_plugin", "com_github_hashicorp_vault_api", "com_github_nats_io_nats_go", "com_github_prometheus_client_golang", "com_github_shirou_gopsutil_v3", "com_github_spf13_viper", "com_github_stretchr_testify", "com_github_testcontainers_testcontainers_go", "in_gopkg_yaml_v3", "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc", "io_opentelemetry_go_otel_sdk", "org_golang_google_grpc", "org_golang_google_protobuf")
