load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "engine",
    srcs = [
        "dag.go",
        "executor.go",
        "scheduler.go",
    ],
    importpath = "github.com/guilledipa/praetor/agent/engine",
    visibility = ["//visibility:public"],
    deps = [
        "//agent/facts",
        "//agent/resources",
        "//pkg/broker",
        "//proto/gen/master",
        "@com_github_nats_io_nats_go//:nats_go",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//codes",
    ],
)

go_test(
    name = "engine_test",
    srcs = [
        "dag_test.go",
        "executor_test.go",
        "scheduler_test.go",
    ],
    embed = [":engine"],
    deps = [
        "//agent/resources",
        "//pkg/broker",
        "//proto/gen/master",
        "@com_github_nats_io_nats_go//:nats_go",
        "@com_github_nats_io_nats_server_v2//server",
        "@com_github_nats_io_nats_server_v2//test",
        "@com_github_stretchr_testify//assert",
    ],
)
