load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pki",
    srcs = ["bootstrap.go"],
    importpath = "github.com/guilledipa/praetor/agent/pki",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pki_test",
    srcs = ["bootstrap_test.go"],
    embed = [":pki"],
)
