load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "plugin",
    srcs = ["client.go"],
    importpath = "github.com/guilledipa/praetor/agent/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//agent/resources",
        "//pkg/plugin",
        "@com_github_hashicorp_go_plugin//:go-plugin",
    ],
)
