load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "broker",
    srcs = ["nats.go"],
    importpath = "github.com/guilledipa/praetor/master/broker",
    visibility = ["//visibility:public"],
    deps = [
        "//master/server",
        "//pkg/broker",
        "//pkg/broker/nats",
        "//proto/gen/master",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
    ],
)

go_test(
    name = "broker_test",
    srcs = ["nats_test.go"],
    embed = [":broker"],
)
