load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "classifier",
    srcs = ["classifier.go"],
    importpath = "github.com/guilledipa/praetor/master/classifier",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "classifier_test",
    srcs = ["classifier_test.go"],
    embed = [":classifier"],
)
