load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitops",
    srcs = ["syncer.go"],
    importpath = "github.com/guilledipa/praetor/master/gitops",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
    ],
)

go_test(
    name = "gitops_test",
    srcs = ["syncer_test.go"],
    embed = [":gitops"],
)
