load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "nats",
    srcs = ["nats.go"],
    importpath = "github.com/guilledipa/praetor/pkg/broker/nats",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/broker",
        "@com_github_nats_io_nats_go//:nats_go",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
    ],
)
