load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "local",
    srcs = ["local.go"],
    importpath = "github.com/guilledipa/praetor/pkg/secrets/local",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "local_test",
    srcs = ["local_test.go"],
    embed = [":local"],
)
