load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cron",
    srcs = ["cron.go"],
    importpath = "github.com/guilledipa/praetor/plugins/linux/resources/cron",
    visibility = ["//visibility:public"],
    deps = [
        "//plugins/linux/resources",
        "//schema",
    ],
)

go_test(
    name = "cron_test",
    srcs = ["cron_test.go"],
    embed = [":cron"],
)
