load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "exec",
    srcs = ["exec.go"],
    importpath = "github.com/guilledipa/praetor/plugins/linux/resources/exec",
    visibility = ["//visibility:public"],
    deps = [
        "//plugins/linux/resources",
        "//schema",
    ],
)
