load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "user",
    srcs = ["user.go"],
    importpath = "github.com/guilledipa/praetor/plugins/linux/resources/user",
    visibility = ["//visibility:public"],
    deps = [
        "//plugins/linux/resources",
        "//schema",
    ],
)

go_test(
    name = "user_test",
    srcs = ["user_test.go"],
    embed = [":user"],
)
